--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,1 +1,9 @@
-# BUILD file as required by Bazel.
+load("@rules_cc//cc:defs.bzl", "cc_library")
+
+cc_library(
+    name = "rapidjson",
+    visibility = ["//visibility:public"],
+    includes = ["include"],
+    defines = ["RAPIDJSON_HAS_STDSTRING=1"],
+    hdrs = glob(["include/rapidjson/**/*.h"]),
+)
